# MapServer

./: .gitignore  CMakeLists.txt  README.md  iconloader.cpp  iconloader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
example/: common_util.py  custom_map_items_example.py  example_track.json  long_track_example.py
interface/: earthquakeusgs.cpp  earthquakeusgs.h  httpserver.cpp  httpserver.h
map/: MapItem.qml  MapItemHistory.qml  MapOverlay.qml  map.cpp  map.h  mapitem.cpp  mapitem.h  mapitemfwd.h  mapitemsmodel.cpp  mapitemsmodel.h  mapupdate.cpp  mapupdate.h
metadata/: chartdisplay.cpp  chartdisplay.h  metadatadisplay.cpp  metadatadisplay.h  metadatadisplay.ui
resources/bootstrap-icons/: version.txt
